Completed song management function