@@ -1,20 +1,18 @@
 package com.phungquocthai.symphony.service;
 
 import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
 
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import com.phungquocthai.symphony.dto.NotificationDTO;
 import com.phungquocthai.symphony.entity.Notification;
+import com.phungquocthai.symphony.entity.NotificationUser;
 import com.phungquocthai.symphony.entity.User;
-import com.phungquocthai.symphony.mapper.NotificationMapper;
 import com.phungquocthai.symphony.repository.NotificationRepository;
+import com.phungquocthai.symphony.repository.NotificationUserRepository;
 import com.phungquocthai.symphony.repository.UserRepository;
 
-import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 
 @Service
@@ -22,51 +20,90 @@ import lombok.RequiredArgsConstructor;
 @Transactional
 public class NotificationService {
 
-	@Autowired
-    NotificationRepository notificationRepository;
-	
-	@Autowired
-    UserRepository userRepository;
-	
-	@Autowired
-	NotificationMapper notificationMapper;
+    private final NotificationRepository notificationRepository;
+    private final NotificationUserRepository notificationUserRepository;
+    private final UserRepository userRepository;
 
-    public NotificationDTO sendNotificationToUser(Integer sendId, Integer userId, String message, String type) {
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new RuntimeException("User not found with id: " + userId));
+    public NotificationDTO sendNotificationToUser(Integer senderId, Integer receiverId, String message, String type) {
+        User sender = userRepository.findById(senderId)
+                .orElseThrow(() -> new RuntimeException("Sender not found with id: " + senderId));
+        User receiver = userRepository.findById(receiverId)
+                .orElseThrow(() -> new RuntimeException("Receiver not found with id: " + receiverId));
 
         Notification notification = Notification.builder()
                 .message(message)
                 .type(type)
-                .isRead(false)
-                .user(userRepository.findById(sendId).orElseThrow())
-                .users(Set.of(user))
+                .sender(sender)
                 .build();
 
-        Notification saved = notificationRepository.save(notification);
-        return notificationMapper.toDTO(saved);
+        notificationRepository.save(notification);
+
+        NotificationUser notificationUser = NotificationUser.builder()
+                .notification(notification)
+                .user(receiver)
+                .isRead(false)
+                .build();
+
+        notificationUserRepository.save(notificationUser);
+
+        return mapToDTO(notification, receiver.getUserId(), false);
     }
 
-    public NotificationDTO sendNotificationToAllUsers(Integer sendId, String message, String type) {
+    public NotificationDTO sendNotificationToAllUsers(Integer senderId, String message, String type) {
+        User sender = userRepository.findById(senderId)
+                .orElseThrow(() -> new RuntimeException("Sender not found with id: " + senderId));
+
         List<User> allUsers = userRepository.findAll();
 
         Notification notification = Notification.builder()
                 .message(message)
                 .type(type)
-                .isRead(false)
-                .user(userRepository.findById(sendId).orElseThrow())
-                .users(Set.copyOf(allUsers))
+                .sender(sender)
                 .build();
 
-        Notification saved = notificationRepository.save(notification);
-        return notificationMapper.toDTO(saved);
+        notificationRepository.save(notification);
+
+        List<NotificationUser> notificationUsers = allUsers.stream()
+                .map(user -> NotificationUser.builder()
+                        .notification(notification)
+                        .user(user)
+                        .isRead(false)
+                        .build())
+                .toList();
+
+        notificationUserRepository.saveAll(notificationUsers);
+
+        return mapToDTO(notification, sender.getUserId(), false);
     }
-    
+
     public List<NotificationDTO> getNotificationsForUser(Integer userId) {
-        return notificationRepository.findByRecipientId(userId).stream()
-                .map(notificationMapper::toDTO)
-                .collect(Collectors.toList());
+        return notificationUserRepository.findNotificationsByUserId(userId).stream()
+                .map(n -> {
+                    Boolean isRead = n.getNotificationUsers().stream()
+                            .filter(nu -> nu.getUser().getUserId().equals(userId))
+                            .findFirst()
+                            .map(NotificationUser::getIsRead)
+                            .orElse(false);
+                    return mapToDTO(n, userId, isRead);
+                })
+                .toList();
     }
-    
-    
+
+    public void markNotificationAsRead(Integer notificationId, Integer userId) {
+        int updatedRows = notificationUserRepository.markAsRead(notificationId, userId);
+        if (updatedRows == 0) {
+            throw new RuntimeException("Không tìm thấy thông báo hoặc đã được đánh dấu đọc.");
+        }
+    }
+
+    private NotificationDTO mapToDTO(Notification notification, Integer userId, Boolean isRead) {
+        return NotificationDTO.builder()
+                .notificationId(notification.getNotificationId())
+                .message(notification.getMessage())
+                .type(notification.getType())
+                .createdAt(notification.getCreatedAt())
+                .senderId(notification.getSender() != null ? notification.getSender().getUserId() : null)
+                .isRead(isRead)
+                .build();
+    }
 }
